# RPi-8BitDo-SN30pro

./: README.md  add-controller.sh  pyproject.toml  setup.cfg
bt-8bitdo-30snpro/: controller.py
examples/: tetris.py
src/bt_8bitdo_30snpro/: README.md  controller.py
src/tetris_led/: demo_ai.py  game.py  main.py  renderer.py
